erDiagram
    companies ||--o{ vehicles : owns
    vehicles ||--o{ licenses : carries
    routes ||--o{ licenses : referenced_by
    vehicles ||--o{ hazardous_materials : logs
    licenses ||--o{ notifications_log : notifies

    companies {
        int id PK
        text name
        text registration_number UK
        text address
        text carrier_type
        text account_type
        int is_deleted
        timestamp deleted_at
        timestamp created_at
    }

    vehicles {
        int id PK
        int company_id FK
        text registration_number UK
        text type
        text category
        int is_deleted
        timestamp deleted_at
        timestamp created_at
    }

    routes {
        int id PK
        text origin
        text destination
        text checkpoints
        int is_deleted
        timestamp deleted_at
        timestamp created_at
    }

    licenses {
        int id PK
        int vehicle_id FK
        int route_id FK
        text record_number UK
        text driver_name
        text driver_phone
        text license_number UK
        date signature_date
        date expiration_date
        text status
        text activity_location
        text contract_type
        int deletion_days
        int is_deleted
        timestamp deleted_at
        timestamp created_at
    }

    hazardous_materials {
        int id PK
        int vehicle_id FK
        text material_type
        int is_deleted
        timestamp deleted_at
        timestamp created_at
    }

    audit_logs {
        int id PK
        text action
        text table_name
        int record_id
        text old_values
        text new_values
        text user_id
        timestamp timestamp
    }

    settings {
        int id PK
        text key UK
        text value
        timestamp updated_at
    }

    users {
        int id PK
        text username UK
        text password_hash
        text role
        timestamp created_at
        timestamp updated_at
    }

    notifications_log {
        int id PK
        int license_id FK
        text email_sent_to
        timestamp sent_at
    }